backend/MyModules/YAPL/YaplParser.py
# Generated from /Users/andrerodriguez/Documents/Github/University/Compilers_2/Grammars/Inputs/YAPL/Yapl.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YaplParser ( Parser ):

    grammarFileName = "Yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'false'", "'true'", 
                     "';'", "'{'", "'}'", "'['", "']'", "'('", "')'", "','", 
                     "'.'", "'\"'", "'''", "'+'", "'-'", "'*'", "'/'", "'~'", 
                     "':'", "'<-'", "'@'", "'<'", "'<='", "'='" ]

    symbolicNames = [ "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
                      "ISVOID", "LOOP", "POOL", "THEN", "WHILE", "NEW", 
                      "NOT", "LET", "FALSE", "TRUE", "SEMICOLON", "LCURLY", 
                      "RCURLY", "LSQUARE", "RSQUARE", "LROUND", "RROUND", 
                      "COMMA", "POINT", "QUOTES", "APOSTROPHE", "ADD", "SUB", 
                      "MULTIPLY", "DIVIDE", "INT_NOT", "COLON", "ASIGN", 
                      "ARROBA", "LESS_THAN", "LESS_EQUAL", "EQUAL", "LINE_COMMENT", 
                      "COMMENT", "INTEGER", "STRING", "TYPE", "ID", "WS" ]

    RULE_program = 0
    RULE_class = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "program", "class", "feature", "formal", "expr" ]

    EOF = Token.EOF
    CLASS=1
    ELSE=2
    FI=3
    IF=4
    IN=5
    INHERITS=6
    ISVOID=7
    LOOP=8
    POOL=9
    THEN=10
    WHILE=11
    NEW=12
    NOT=13
    LET=14
    FALSE=15
    TRUE=16
    SEMICOLON=17
    LCURLY=18
    RCURLY=19
    LSQUARE=20
    RSQUARE=21
    LROUND=22
    RROUND=23
    COMMA=24
    POINT=25
    QUOTES=26
    APOSTROPHE=27
    ADD=28
    SUB=29
    MULTIPLY=30
    DIVIDE=31
    INT_NOT=32
    COLON=33
    ASIGN=34
    ARROBA=35
    LESS_THAN=36
    LESS_EQUAL=37
    EQUAL=38
    LINE_COMMENT=39
    COMMENT=40
    INTEGER=41
    STRING=42
    TYPE=43
    ID=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YaplParser.ClassContext)
            else:
                return self.getTypedRuleContext(YaplParser.ClassContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.SEMICOLON)
            else:
                return self.getToken(YaplParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.class_()
                self.state = 11
                self.match(YaplParser.SEMICOLON)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==YaplParser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YaplParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.TYPE)
            else:
                return self.getToken(YaplParser.TYPE, i)

        def LCURLY(self):
            return self.getToken(YaplParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(YaplParser.RCURLY, 0)

        def INHERITS(self):
            return self.getToken(YaplParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YaplParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YaplParser.FeatureContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.SEMICOLON)
            else:
                return self.getToken(YaplParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YaplParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass" ):
                return visitor.visitClass(self)
            else:
                return visitor.visitChildren(self)




    def class_(self):

        localctx = YaplParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(YaplParser.CLASS)
            self.state = 18
            self.match(YaplParser.TYPE)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YaplParser.INHERITS:
                self.state = 19
                self.match(YaplParser.INHERITS)
                self.state = 20
                self.match(YaplParser.TYPE)


            self.state = 23
            self.match(YaplParser.LCURLY)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YaplParser.ID:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(YaplParser.SEMICOLON)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(YaplParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YaplParser.ID, 0)

        def LROUND(self):
            return self.getToken(YaplParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(YaplParser.RROUND, 0)

        def COLON(self):
            return self.getToken(YaplParser.COLON, 0)

        def TYPE(self):
            return self.getToken(YaplParser.TYPE, 0)

        def LCURLY(self):
            return self.getToken(YaplParser.LCURLY, 0)

        def expr(self):
            return self.getTypedRuleContext(YaplParser.ExprContext,0)


        def RCURLY(self):
            return self.getToken(YaplParser.RCURLY, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YaplParser.FormalContext)
            else:
                return self.getTypedRuleContext(YaplParser.FormalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.COMMA)
            else:
                return self.getToken(YaplParser.COMMA, i)

        def ASIGN(self):
            return self.getToken(YaplParser.ASIGN, 0)

        def getRuleIndex(self):
            return YaplParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = YaplParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(YaplParser.ID)
                self.state = 35
                self.match(YaplParser.LROUND)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YaplParser.ID:
                    self.state = 36
                    self.formal()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YaplParser.COMMA:
                        self.state = 37
                        self.match(YaplParser.COMMA)
                        self.state = 38
                        self.formal()
                        self.state = 43
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 46
                self.match(YaplParser.RROUND)
                self.state = 47
                self.match(YaplParser.COLON)
                self.state = 48
                self.match(YaplParser.TYPE)
                self.state = 49
                self.match(YaplParser.LCURLY)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(YaplParser.RCURLY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(YaplParser.ID)
                self.state = 54
                self.match(YaplParser.COLON)
                self.state = 55
                self.match(YaplParser.TYPE)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YaplParser.ASIGN:
                    self.state = 56
                    self.match(YaplParser.ASIGN)
                    self.state = 57
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YaplParser.ID, 0)

        def COLON(self):
            return self.getToken(YaplParser.COLON, 0)

        def TYPE(self):
            return self.getToken(YaplParser.TYPE, 0)

        def getRuleIndex(self):
            return YaplParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = YaplParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(YaplParser.ID)
            self.state = 63
            self.match(YaplParser.COLON)
            self.state = 64
            self.match(YaplParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.ID)
            else:
                return self.getToken(YaplParser.ID, i)

        def ASIGN(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.ASIGN)
            else:
                return self.getToken(YaplParser.ASIGN, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(YaplParser.ExprContext,i)


        def LROUND(self):
            return self.getToken(YaplParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(YaplParser.RROUND, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.COMMA)
            else:
                return self.getToken(YaplParser.COMMA, i)

        def IF(self):
            return self.getToken(YaplParser.IF, 0)

        def THEN(self):
            return self.getToken(YaplParser.THEN, 0)

        def ELSE(self):
            return self.getToken(YaplParser.ELSE, 0)

        def FI(self):
            return self.getToken(YaplParser.FI, 0)

        def WHILE(self):
            return self.getToken(YaplParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YaplParser.LOOP, 0)

        def POOL(self):
            return self.getToken(YaplParser.POOL, 0)

        def LCURLY(self):
            return self.getToken(YaplParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(YaplParser.RCURLY, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.SEMICOLON)
            else:
                return self.getToken(YaplParser.SEMICOLON, i)

        def LET(self):
            return self.getToken(YaplParser.LET, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.COLON)
            else:
                return self.getToken(YaplParser.COLON, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YaplParser.TYPE)
            else:
                return self.getToken(YaplParser.TYPE, i)

        def IN(self):
            return self.getToken(YaplParser.IN, 0)

        def NEW(self):
            return self.getToken(YaplParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(YaplParser.ISVOID, 0)

        def INT_NOT(self):
            return self.getToken(YaplParser.INT_NOT, 0)

        def NOT(self):
            return self.getToken(YaplParser.NOT, 0)

        def INTEGER(self):
            return self.getToken(YaplParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(YaplParser.STRING, 0)

        def TRUE(self):
            return self.getToken(YaplParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YaplParser.FALSE, 0)

        def ADD(self):
            return self.getToken(YaplParser.ADD, 0)

        def SUB(self):
            return self.getToken(YaplParser.SUB, 0)

        def MULTIPLY(self):
            return self.getToken(YaplParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(YaplParser.DIVIDE, 0)

        def LESS_THAN(self):
            return self.getToken(YaplParser.LESS_THAN, 0)

        def LESS_EQUAL(self):
            return self.getToken(YaplParser.LESS_EQUAL, 0)

        def EQUAL(self):
            return self.getToken(YaplParser.EQUAL, 0)

        def POINT(self):
            return self.getToken(YaplParser.POINT, 0)

        def ARROBA(self):
            return self.getToken(YaplParser.ARROBA, 0)

        def getRuleIndex(self):
            return YaplParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YaplParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 67
                self.match(YaplParser.ID)
                self.state = 68
                self.match(YaplParser.ASIGN)
                self.state = 69
                self.expr(24)
                pass

            elif la_ == 2:
                self.state = 70
                self.match(YaplParser.ID)
                self.state = 71
                self.match(YaplParser.LROUND)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YaplParser.IF) | (1 << YaplParser.ISVOID) | (1 << YaplParser.WHILE) | (1 << YaplParser.NEW) | (1 << YaplParser.NOT) | (1 << YaplParser.LET) | (1 << YaplParser.FALSE) | (1 << YaplParser.TRUE) | (1 << YaplParser.LCURLY) | (1 << YaplParser.LROUND) | (1 << YaplParser.INT_NOT) | (1 << YaplParser.INTEGER) | (1 << YaplParser.STRING) | (1 << YaplParser.ID))) != 0):
                    self.state = 72
                    self.expr(0)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YaplParser.COMMA:
                        self.state = 73
                        self.match(YaplParser.COMMA)
                        self.state = 74
                        self.expr(0)
                        self.state = 79
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 82
                self.match(YaplParser.RROUND)
                pass

            elif la_ == 3:
                self.state = 83
                self.match(YaplParser.IF)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(YaplParser.THEN)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(YaplParser.ELSE)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(YaplParser.FI)
                pass

            elif la_ == 4:
                self.state = 91
                self.match(YaplParser.WHILE)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(YaplParser.LOOP)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(YaplParser.POOL)
                pass

            elif la_ == 5:
                self.state = 97
                self.match(YaplParser.LCURLY)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.expr(0)
                    self.state = 99
                    self.match(YaplParser.SEMICOLON)
                    self.state = 103 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YaplParser.IF) | (1 << YaplParser.ISVOID) | (1 << YaplParser.WHILE) | (1 << YaplParser.NEW) | (1 << YaplParser.NOT) | (1 << YaplParser.LET) | (1 << YaplParser.FALSE) | (1 << YaplParser.TRUE) | (1 << YaplParser.LCURLY) | (1 << YaplParser.LROUND) | (1 << YaplParser.INT_NOT) | (1 << YaplParser.INTEGER) | (1 << YaplParser.STRING) | (1 << YaplParser.ID))) != 0)):
                        break

                self.state = 105
                self.match(YaplParser.RCURLY)
                pass

            elif la_ == 6:
                self.state = 107
                self.match(YaplParser.LET)
                self.state = 108
                self.match(YaplParser.ID)
                self.state = 109
                self.match(YaplParser.COLON)
                self.state = 110
                self.match(YaplParser.TYPE)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YaplParser.ASIGN:
                    self.state = 111
                    self.match(YaplParser.ASIGN)
                    self.state = 112
                    self.expr(0)


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==YaplParser.COMMA:
                    self.state = 115
                    self.match(YaplParser.COMMA)
                    self.state = 116
                    self.match(YaplParser.ID)
                    self.state = 117
                    self.match(YaplParser.COLON)
                    self.state = 118
                    self.match(YaplParser.TYPE)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==YaplParser.ASIGN:
                        self.state = 119
                        self.match(YaplParser.ASIGN)
                        self.state = 120
                        self.expr(0)


                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(YaplParser.IN)
                self.state = 129
                self.expr(18)
                pass

            elif la_ == 7:
                self.state = 130
                self.match(YaplParser.NEW)
                self.state = 131
                self.match(YaplParser.TYPE)
                pass

            elif la_ == 8:
                self.state = 132
                self.match(YaplParser.ISVOID)
                self.state = 133
                self.expr(16)
                pass

            elif la_ == 9:
                self.state = 134
                self.match(YaplParser.INT_NOT)
                self.state = 135
                self.expr(11)
                pass

            elif la_ == 10:
                self.state = 136
                self.match(YaplParser.NOT)
                self.state = 137
                self.expr(7)
                pass

            elif la_ == 11:
                self.state = 138
                self.match(YaplParser.LROUND)
                self.state = 139
                self.expr(0)
                self.state = 140
                self.match(YaplParser.RROUND)
                pass

            elif la_ == 12:
                self.state = 142
                self.match(YaplParser.ID)
                pass

            elif la_ == 13:
                self.state = 143
                self.match(YaplParser.INTEGER)
                pass

            elif la_ == 14:
                self.state = 144
                self.match(YaplParser.STRING)
                pass

            elif la_ == 15:
                self.state = 145
                self.match(YaplParser.TRUE)
                pass

            elif la_ == 16:
                self.state = 146
                self.match(YaplParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 191
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 189
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 149
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 150
                        self.match(YaplParser.ADD)
                        self.state = 151
                        self.expr(16)
                        pass

                    elif la_ == 2:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 152
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 153
                        self.match(YaplParser.SUB)
                        self.state = 154
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 155
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 156
                        self.match(YaplParser.MULTIPLY)
                        self.state = 157
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 158
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 159
                        self.match(YaplParser.DIVIDE)
                        self.state = 160
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 161
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 162
                        self.match(YaplParser.LESS_THAN)
                        self.state = 163
                        self.expr(11)
                        pass

                    elif la_ == 6:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 164
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 165
                        self.match(YaplParser.LESS_EQUAL)
                        self.state = 166
                        self.expr(10)
                        pass

                    elif la_ == 7:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 167
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 168
                        self.match(YaplParser.EQUAL)
                        self.state = 169
                        self.expr(9)
                        pass

                    elif la_ == 8:
                        localctx = YaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 170
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 173
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==YaplParser.ARROBA:
                            self.state = 171
                            self.match(YaplParser.ARROBA)
                            self.state = 172
                            self.match(YaplParser.TYPE)


                        self.state = 175
                        self.match(YaplParser.POINT)
                        self.state = 176
                        self.match(YaplParser.ID)
                        self.state = 177
                        self.match(YaplParser.LROUND)
                        self.state = 186
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YaplParser.IF) | (1 << YaplParser.ISVOID) | (1 << YaplParser.WHILE) | (1 << YaplParser.NEW) | (1 << YaplParser.NOT) | (1 << YaplParser.LET) | (1 << YaplParser.FALSE) | (1 << YaplParser.TRUE) | (1 << YaplParser.LCURLY) | (1 << YaplParser.LROUND) | (1 << YaplParser.INT_NOT) | (1 << YaplParser.INTEGER) | (1 << YaplParser.STRING) | (1 << YaplParser.ID))) != 0):
                            self.state = 178
                            self.expr(0)
                            self.state = 183
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==YaplParser.COMMA:
                                self.state = 179
                                self.match(YaplParser.COMMA)
                                self.state = 180
                                self.expr(0)
                                self.state = 185
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 188
                        self.match(YaplParser.RROUND)
                        pass

             
                self.state = 193
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 15)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 23)
         




